<resources>
    <string name="app_name">TrashCare</string>

    <!--  OnBoarding  -->
    <string name="first_slide_title">Faktanya tiap tahun jumlah sampah mengalami kenaikan.</string>
    <string name="second_slide_title">Faktanya Sampah Juga Bisa Diolah menjadi Barang Yang memilki nilai Jual</string>
    <string name="third_slide_title">Mari Berikan Upaya &amp; Dukungan Guna Bumi Yang lebih baik</string>
    <string name="get_started">Get Started </string>
    <string name="next">Next </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kirim_ke_email">Kami akan mengirimkan link reset password ke email anda</string>
    <string name="order_trash">Order Trash</string>
    <string name="tacycle">TaCycle</string>
    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="plastik">Plastik</string>
    <string name="kaca">Kaca</string>
    <string name="limbah_dapur">Limbah Dapur</string>
    <string name="kertas_kardus">Kertas/Kardus</string>
    <string name="serbuk_kayu">Serbuk Kayu</string>
    <string name="elektronik">Elektronik</string>
    <string name="lokasi_pengambilan">Lokasi Pengambilan</string>
    <string name="waktu_pengambilan">Waktu Pengambilan</string>
    <string name="pilih_waktu_pengambilan">Pilih Waktu Pengambilan</string>
    <string name="pesan">Pesan</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_saya">Alamat Saya</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="nama_jalan">Nama Jalan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="detail_alamat">Detail Alamat</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="hapus_alamat">Hapus Alamat</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="description">Description</string>
    <string name="cart">Cart</string>
    <string name="check_out">Check Out</string>
    <string name="semua">Semua</string>
    <string name="total">Total</string>
    <string name="data_pesanan">Data Pesanan</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="gunakan_tacoins">Gunakan TaCoins </string>
    <string name="tacoins">TaCoins</string>
    <string name="subtotal">Sub Total</string>
    <string name="shipping">Shipping</string>
    <string name="bayar">Bayar</string>
    <string name="payment_info">Informasi Pembayaran</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="imageview">ImageView</string>
    <string name="konfirmasi">Konfirmasi Pembayaran</string>
    <string name="pilih_bukti_pembayaran">Pilih Bukti Pembayaran</string>
    <string name="proses_konfirmasi">Proses Konfirmasi</string>
    <string name="rekening_afif">1250447148</string>
    <string name="afif_ghani">a.n/ Afif Ghani Zahran</string>
    <string name="upload_bukti_pembayaran">Upload Bukti Pembayaran</string>
    <string name="delivered_to">Delivered to</string>
    <string name="filter">Filter</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="profile">Profile</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="email">Email</string>
    <string name="no_telepon">No Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="selesaikan_misi">Selesaikan Misi</string>
    <string name="my_task">My Task</string>
    <string name="best_products">Best Products</string>
    <string name="kerjakan">Kerjakan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="daftar">Sign Up</string>
    <string name="login">Log In</string>
    <string name="masuk_dengan_google">Masuk Dengan Google</string>
    <string name="commerce_history">Commerce History</string>
    <string name="ongoing">OnGoing</string>
    <string name="done">Done</string>
    <string name="bookmark">Bookmark</string>
    <string name="security">Security</string>
    <string name="password_lama">Password Lama</string>
    <string name="update">Update</string>
    <string name="tacommerce">TaCommerce</string>
    <string name="anda_mendapatkan_10_tacoins">Anda mendapatkan 10 TaCoins</string>
    <string name="judul_alamat">Judul Alamat (ex: Rumah, Kantor)</string>

</resources>