<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.profile.AddAddressActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/appBarContainer"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/bg_appbar"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/Widget.MaterialComponents.Button.IconOnly"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                app:icon="@drawable/ic_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/alamat"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNamaJalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/nama_jalan"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/appBarContainer">

            <EditText
                android:id="@+id/et_nama_jalan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutKelurahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/kelurahan"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutNamaJalan">

            <EditText
                android:id="@+id/et_kelurahan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutKecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/kecamatan"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutKelurahan">

            <EditText
                android:id="@+id/et_kecamatan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutKota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/kota"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutKecamatan">

            <EditText
                android:id="@+id/et_kota"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutProvinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/provinsi"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutKota">

            <EditText
                android:id="@+id/et_provinsi"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutKodePos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/kode_pos"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutProvinsi">

            <EditText
                android:id="@+id/et_kode_pos"
                android:inputType="number"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDetailAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="100dp"
            android:hint="@string/detail_alamat"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutKodePos">

            <EditText
                android:id="@+id/et_detail_alamat"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tambah_alamat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="36dp"
            android:enabled="false"
            android:minHeight="48dp"
            android:text="@string/tambah_alamat"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/btn_tambah_alamat"
            app:layout_constraintEnd_toEndOf="@id/btn_tambah_alamat"
            app:layout_constraintStart_toStartOf="@id/btn_tambah_alamat"
            app:layout_constraintTop_toTopOf="@id/btn_tambah_alamat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>