<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.commerce.PaymentFragment">

    <RelativeLayout
        android:id="@+id/appBarContainer"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bg_appbar"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_ios" />

        <TextView
            android:id="@+id/tv_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/plusjakartasans_bold"
            android:text="@string/payment_info"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_payment_info"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_bni" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/plusjakartasans_semibold"
                        android:text="@string/rekening_afif"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/plusjakartasans_semibold"
                        android:text="@string/afif_ghani"
                        android:textSize="15sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_upload_bukti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/upload_bukti_pembayaran"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_payment_info"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/layoutPhoto"
                android:layout_width="280dp"
                android:layout_height="280dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_upload_bukti">

                <TextView
                    android:id="@+id/tv_pilih_bukti_pembayaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/plusjakartasans_bold"
                    android:text="@string/pilih_bukti_pembayaran"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_bukti_pembayaran"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/pic_background"
                    android:contentDescription="@string/imageview"
                    android:padding="5dp" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_konfirmasi"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="30dp"
                android:text="@string/konfirmasi"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/btn_konfirmasi"
                app:layout_constraintEnd_toEndOf="@id/btn_konfirmasi"
                app:layout_constraintStart_toStartOf="@id/btn_konfirmasi"
                app:layout_constraintTop_toTopOf="@id/btn_konfirmasi" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>